[gd_scene load_steps=9 format=3 uid="uid://dnocrbx471nay"]

[ext_resource type="Script" path="res://player.gd" id="1_i7plm"]
[ext_resource type="Shader" path="res://depth.gdshader" id="2_e8qh0"]
[ext_resource type="Shader" path="res://projector.gdshader" id="2_vemwh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ncynv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sdf5c"]
render_priority = 0
shader = ExtResource("2_e8qh0")

[sub_resource type="QuadMesh" id="QuadMesh_rnsxe"]
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nh0e3"]
shader = ExtResource("2_vemwh")
shader_parameter/bottom_left = null
shader_parameter/bottom_right = null
shader_parameter/cam_forward = null
shader_parameter/cam_pos = null
shader_parameter/clear_color = Color(1, 0, 1, 1)
shader_parameter/far_clip = null
shader_parameter/frozen_bottom_left = null
shader_parameter/frozen_bottom_right = null
shader_parameter/frozen_cam_forward = null
shader_parameter/frozen_cam_pos = null
shader_parameter/frozen_projection_matrix = null
shader_parameter/frozen_top_left = null
shader_parameter/frozen_top_right = null
shader_parameter/frozen_world_to_camera_matrix = null
shader_parameter/is_enabled = null
shader_parameter/near_clip = null
shader_parameter/projection_matrix = null
shader_parameter/reproject_movement = null
shader_parameter/stretch_borders = null
shader_parameter/tint = null
shader_parameter/top_left = null
shader_parameter/top_right = null
shader_parameter/world_to_camera_matrix = null

[sub_resource type="ViewportTexture" id="ViewportTexture_hu2cp"]
viewport_path = NodePath("CameraPivot/SubViewport")

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_i7plm")

[node name="PlayerCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_ncynv")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="SubViewport" type="SubViewport" parent="CameraPivot"]
handle_input_locally = false
render_target_update_mode = 4

[node name="Cam" type="Camera3D" parent="CameraPivot/SubViewport"]
cull_mask = 983039

[node name="DepthViewport" type="SubViewport" parent="CameraPivot"]

[node name="DepthQuad" type="MeshInstance3D" parent="CameraPivot/DepthViewport"]
visible = false
layers = 65536
material_override = SubResource("ShaderMaterial_sdf5c")
cast_shadow = 0
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_rnsxe")

[node name="DepthCam" type="Camera3D" parent="CameraPivot/DepthViewport"]

[node name="ProjectionRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_nh0e3")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_hu2cp")

[node name="ControlPanel" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="ControlPanel"]
layout_mode = 2

[node name="EnabledCheckbox" type="CheckBox" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Enable Timewarp"

[node name="FreezeCheckbox" type="CheckBox" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Freeze Cam (F)"

[node name="StretchCheckbox" type="CheckBox" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Stretch Borders"

[node name="ReprojectCheckbox" type="CheckBox" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Reproject Movement"

[node name="HBoxContainer" type="HBoxContainer" parent="ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ControlPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Target FPS"

[node name="TargetFPSLabel" type="Label" parent="ControlPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "20"

[node name="TargetFPSSlider" type="HSlider" parent="ControlPanel/VBoxContainer"]
layout_mode = 2
min_value = 10.0
step = 10.0
value = 10.0
tick_count = 10
